--- a/gomical/index.html
+++ b/gomical/index.html
@@ -4,7 +4,7 @@
     <title>札幌市ごみ収集日カレンダー(iCal形式)</title>
   </head>
   <body>
-    <h2>>札幌市ごみ収集日カレンダー(iCal形式)</h2>
+    <h2>札幌市ごみ収集日カレンダー(iCal形式)</h2>
     <p>このデータは<a href="http://www.city.sapporo.jp/seiso/kaisyu/yomiage/index.html">音声読み上げ用家庭ごみ収集日カレンダー</a>をiCal形式にコンバートしたものです。</p>
     <a href="./ics/6c48d67c65fe65c61a68a2c8809dd39e.ics?version=1">中央区 中島公園</a><br>
     <a href="./ics/2ba02d4865f30045b83de3f75ab5e4df.ics?version=1">中央区 伏見1丁目～5丁目</a><br>
