成果を追加
ゴミカレンダーを追加

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
 <li>全員参加のLT</li>
 <li>ビギナーズセッション</li>
 </ul><h2>
+<h2>
+<a name="" class="anchor" href=""><span class="octicon octicon-link"></span></a>成果</h2>
+<ul>
+<li><a href="http://gomical.net/">ゴミカレンダー</a></li>
+</ul>
+
+<h2>
 <a name="%E4%BB%8A%E5%BE%8C%E3%81%AE%E4%BA%88%E5%AE%9A" class="anchor" href="#%E4%BB%8A%E5%BE%8C%E3%81%AE%E4%BA%88%E5%AE%9A"><span class="octicon octicon-link"></span></a>今後の予定</h2>
 
 <ul>
