--- a/index.html
+++ b/index.html
@@ -16,13 +16,7 @@
     <header>
       <div class="container">
         <h1>Hokkaidopm-casual</h1>
-        <h2>Hokkaido.pm Casualで使うリポジトリ</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/hokkaidopm/hokkaidopm-casual/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/hokkaidopm/hokkaidopm-casual/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/hokkaidopm/hokkaidopm-casual" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
+        <a href="https://github.com/hokkaidopm/hokkaidopm-casual" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
       </div>
     </header>
 
@@ -36,11 +30,6 @@
 
 <p>札幌で毎月第3水曜日に開催している勉強会</p>
 
-<p>参考: <a href="http://hokkaido.pm.org/">http://hokkaido.pm.org/</a></p>
-
-<h2>
-<a name="%E6%B4%BB%E5%8B%95%E5%86%85%E5%AE%B9" class="anchor" href="#%E6%B4%BB%E5%8B%95%E5%86%85%E5%AE%B9"><span class="octicon octicon-link"></span></a>活動内容</h2>
-
 <ul>
 <li>全員参加のLT</li>
 <li>ビギナーズセッション</li>
@@ -49,6 +38,7 @@
 <a name="" class="anchor" href=""><span class="octicon octicon-link"></span></a>成果</h2>
 <ul>
 <li><a href="http://gomical.net/">ゴミカレンダー</a></li>
+<li><a href="./gomical_html/">ゴミカレンダー（HTML Ver.）</a></li>
 </ul>
 
 <h2>
